<resources>
    <string name="app_name">AndroidPemula</string>
    <string name="material_name">Nama Produk</string>
    <string name="price">Harga</string>
    <string name="description">Deskripsi</string>
    <string name="beli">Beli</string>
    <string name="u_d_crocobuild">U.D. CrocoBuild</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="kategori">Kategori</string>
    <string name="content_specs_category">Isi kategori</string>
    <string name="merk">Merk</string>
    <string name="content_specs_brand">Isi Merk</string>
    <string name="beli">Beli</string>
</resources>
